fix(storybook): Add correct gap to the blockquote grid Card: https://app.clickup.com/t/863fyjf8e

--- a/src/styles/elements/_blockquote-grid.css
+++ b/src/styles/elements/_blockquote-grid.css
@@ -1,6 +1,6 @@
 .blockquote-grid {
     --blockquote-grid-columns-count: 100%;
-    --blockquote-grid-gap: var(--spacing-l);
+    --blockquote-grid-gap: var(--content-spacing-between-columns);
     --blockquote-grid-z-index: var(--content-spacing-between-columns);
     --blockquote-grid-margin: var(--spacing-between-elements-normal) auto 0;
     --blockquote-grid-width: var(--content-width-with-padding);
